# context-coder

./: .gitignore  CORRECOES_P0.md  Makefile  PROBLEMAS_IDENTIFICADOS.md  README.md  docker-compose.yml  setup.sh
.sdd/: IMPLEMENTATION_GUIDE.md  ISSUE_1_RESOLUTION.md  config.json  guidelines.md
.sdd/templates/: decision-matrix.md  example-json-format.json  feature-brief-v2.md  plan-compact.md  plan-template.md  research-compact.md  research-template.md  spec-compact.md  spec-template.md  tasks-compact.md  tasks-template.md  todo-compact.md  todo-list-template.md
backend/: Dockerfile  context-coder.code-workspace  main.py  pyproject.toml  pytest.ini
backend/agent/: __init__.py  state.py
backend/agent/nodes/: core.py  optional.py
backend/api/: agent.py  export.py  github.py
backend/services/: langsmith.py  llm.py  mcp.py
backend/tests/: test_llm.py
backend/tests/agent/: test_state.py
context-coder/: .gitignore  ENV_TEMPLATE.md  Makefile  QUICKSTART.md  README.md  RUN_WITHOUT_DOCKER.md  docker-compose.yml  fix-docker-context.sh  setup-env.sh
context-coder/backend/: Dockerfile  main.py  pyproject.toml
context-coder/backend/agent/: checkpointing.py  edges.py  graph.py
context-coder/backend/api/: repositories.py
context-coder/backend/services/: export.py  github.py  llm.py
docs/: FRONTEND_MOVED.md  LANGSMITH_INTEGRATION.md  MIGRATION_GOOGLE_GEMINI.md  QUICKSTART.md  README.md  README_BACKEND.md  RESTRUCTURE_SUMMARY.md  RESUMO_REVISAO.md  RUN_WITHOUT_DOCKER.md
scripts/: setup-env.sh  setup-google-gemini.sh  start.sh
specs/: 00-overview.md  index.md
(+37 files in other folders)
